# trozas

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  updater.json  vite.config.ts
src/: App.tsx  App.vue  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AuthTokenForm.tsx  NavBar.tsx  NavBar.vue  SetupForm.tsx  SetupForm.vue  TheFilterModal.vue  TheLoader.vue  TheLogActionModal.vue  TheNavBar.vue
src/layouts/: MainLayout.tsx  MainLayout.vue
src/lib/http-client/: index.ts
src/lib/rancher-client/: client.ts
src/lib/trovas/actions/: index.ts
src/lib/trovas/actions/schemas/: index.ts
src/pages/: 500.vue  ClusterDetails.vue  DeploymentDetails.vue  Home.vue  Setup.vue
src/plugins/rancher-client/: composable.ts  index.ts  types.ts
src/router/: index.ts
src/services/rancher/: index.ts
src/state/: AuthContext.tsx  connection.ts  filter.ts  theme.ts
src/types/: index.ts
