[package]
name = "app"
version = "1.3.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["http-request"] }
home = "0.5.4"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
futures-util = "0.3.25"
futures-channel = "0.3.25"
reqwest = { version = "0.11.14", features = ["json"] }
sha2 = "0.10.6"
radix64 = "0.6.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
